--- a/study-app/q1-50.md
+++ b/study-app/q1-50.md
@@ -743,18 +743,6 @@ D: Use gsutil rewrite and set the Delete action to 365 days.
 
 Answer: B
 
-You need to set up a policy so that videos stored in a specific Cloud Storage Regional bucket are moved to Coldline after 90 days, and then deleted after one year from their creation. How should you set up the policy?
-
-A: Use Cloud Storage Object Lifecycle Management using Age conditions with SetStorageClass and Delete actions. Set the SetStorageClass action to 90 days and the Delete action to 275 days (365 "" 90)
-
-B: Use Cloud Storage Object Lifecycle Management using Age conditions with SetStorageClass and Delete actions. Set the SetStorageClass action to 90 days and the Delete action to 365 days.
-
-C: Use gsutil rewrite and set the Delete action to 275 days (365-90).
-
-D: Use gsutil rewrite and set the Delete action to 365 days.
-
-Answer: B
-
 **Question 40**
 
 You have a Linux VM that must connect to Cloud SQL. You created a service account with the appropriate access rights. You want to make sure that the VM uses this service account instead of the default Compute Engine service account. What should you do?
@@ -767,7 +755,18 @@ C: Download a JSON Private Key for the service account. On the Custom Metadata o
 
 D: Download a JSON Private Key for the service account. After creating the VM, ssh into the VM and save the JSON under ~/.gcloud/compute-engine-service- account.json.
 
+```text
 Answer: A
+```
+
+- Menu -> Compute Engine -> Create an instance -> Identity and API access
+- **Cloud SQL Admin**: Full control of Cloud SQL resources.
+- **Cloud SQL Client**: Connectivity access to Cloud SQL instances.
+- **Cloud SQL Editor**:Full control of existing Cloud SQL instances excluding modifying users, SSL certificates or deleting resources.
+- **Cloud SQL Instance User**: Role allowing access to a Cloud SQL instance
+- **Cloud SQL Viewer**: Read-only access to Cloud SQL resources.
+- Linux VM and install Cloud SQL ??
+  https://cloud.google.com/compute/docs/instances/sql-server/creating-sql-server-instances
 
 **Question 41**
 
@@ -796,6 +795,37 @@ C: Activate two configurations using gcloud configurations activate [NAME]. Run 
 D: Activate two configurations using gcloud configurations activate [NAME]. Run gcloud configurations list to start the Compute Engine instances.
 
 Answer: A
+https://www.examtopics.com/discussions/google/view/16692-exam-associate-cloud-engineer-topic-1-question-21-discussion/
+
+- https://www.youtube.com/watch?v=M8z1Wldsj-g
+
+```js
+// Create dev configration
+gcloud config configrations create dev
+gcloud config set project example-dev-123
+gcloud config set account test@example.com
+gcloud config set compute/region us-central1
+gcloud config set compute/zone us-central1-b
+
+//Create prod configuration
+gcloud config configuration create prod
+gcloud config set project example-prod-123
+gcloud config set account test@example.com
+gcloud config set compute/region us-central1
+gcloud config set compute/zone us-central1-b
+
+//Activate different configurations
+gcloud config configurations activate dev
+gcloud config configuratinos activate prod
+
+// Config files themselves
+~/.config/gcloud/active_config
+~/.config/gcloud/configurations/config_dev
+~/.config/gcloud/configurations/config_prod
+
+//TEST
+gcloud compute instances list
+```
 
 **Question 43**
 
@@ -811,6 +841,14 @@ D: Execute the Deployment Manager template using the ""-preview option in the sa
 
 Answer: D
 
+https://cloud.google.com/sdk/gcloud/reference/deployment-manager/deployments
+
+```js
+nano vm.yaml
+gcloud deployment-manager deployments create my-first-deployment --config vm.yaml
+gcloud deployment-manager deployments describe my-first-deployment
+```
+
 **Question 44**
 
 You are building a pipeline to process time-series data. Which Google Cloud Platform services should you put in boxes 1,2,3, and 4?
@@ -823,7 +861,13 @@ C: Cloud Pub/Sub, Cloud Storage, BigQuery, Cloud Bigtable
 
 D: Cloud Pub/Sub, Cloud Dataflow, Cloud Bigtable, BigQuery
 
-Answer: D
+**Answer: D**
+
+- https://www.examtopics.com/discussions/google/view/20453-exam-associate-cloud-engineer-topic-1-question-23-discussion/
+- Cloud Pub/Sub -> Cloud Dataflow -> Cloud Bigtable(Storage) -> BigQuery(Analytics)
+- Cloud Pub/Sub は Google が提供するメッセージングサービスです
+
+<hr />
 
 **Question 45**
 
@@ -838,6 +882,22 @@ C: Create a Deployment Manager configuration file that copies the current App En
 D: Deploy your application again using gcloud and specify the project parameter with the new project name to create the new project.
 
 Answer: A
+https://cloud.google.com/sdk/gcloud/reference/app/deploy
+
+- You can deploy to a different project by using –project flag.
+  By default, the service is deployed the current project configured via:
+  $ gcloud config set core/project PROJECT
+  To override this value for a single deployment, use the –project flag:
+- Correct answer is A as gcloud can be used to create a new project and the gcloud app deploy can point to the new project.Refer GCP documentation - GCloud App Deploy.
+- Option B is wrong as the option to use gcloud app cp does not exist.
+- Option C is wrong as Deployment Manager does not copy the application, but allows you to specify all the resources needed for your application in a declarative format using yaml.
+- Option D is wrong as gcloud app deploy would not create a new project. The project should be created before usage.
+
+```js
+gcloud app deploy ~/my_app/app.yaml –project=PROJECT
+```
+
+<hr />
 
 **Question 46**
 
@@ -853,6 +913,15 @@ D: Add the auditor user accounts to two new custom IAM roles.
 
 Answer: A
 
+- https://cloud.google.com/iam/docs/job-functions/auditing#scenario_external_auditors
+- As per google best practices it is recommended to use predefined roles and create groups to control access to multiple users with same responsibility
+- https://cloud.google.com/iam/docs/understanding-roles#bigquery-roles
+- BigQuery Data Viewer
+  (roles/bigquery.dataViewer) - Read data and metadata from the table or view.
+- Logs Viewer
+(roles/logging.viewer)
+<hr />
+
 **Question 47**
 
 You need to set up permissions for a set of Compute Engine instances to enable them to write data into a particular Cloud Storage bucket. You want to follow Google-recommended practices. What should you do?
@@ -865,7 +934,69 @@ C: Create a service account and add it to the IAM role'storage.objectCreator' fo
 
 D: Create a service account and add it to the IAM role'storage.objectAdmin' for that bucket.
 
-Answer: A
+Answer: A (or C)
+
+- https://www.examtopics.com/discussions/google/view/16698-exam-associate-cloud-engineer-topic-1-question-26-discussion/
+
+storage.objectCreator
+storage.objectAdmin
+
+```js
+$ gcloud iam roles describe roles/storage.objectViewer
+description: Read access to GCS objects.
+etag: AA==
+includedPermissions:
+- resourcemanager.projects.get
+- resourcemanager.projects.list
+- storage.objects.get
+- storage.objects.list
+name: roles/storage.objectViewer
+stage: GA
+title: Storage Object Viewer
+hiroko@cloudshell:~ (hiroko-test-361705)$
+```
+
+```js
+$ gcloud iam roles describe roles/storage.objectCreator
+description: Access to create objects in GCS.
+etag: AA==
+includedPermissions:
+- orgpolicy.policy.get
+- resourcemanager.projects.get
+- resourcemanager.projects.list
+- storage.multipartUploads.abort
+- storage.multipartUploads.create
+- storage.multipartUploads.listParts
+- storage.objects.create
+name: roles/storage.objectCreator
+stage: GA
+title: Storage Object Creator
+hiroko@cloudshell:~ (hiroko-test-361705)$
+```
+
+```js
+$ gcloud iam roles describe roles/storage.objectAdmin
+description: Full control of GCS objects.
+etag: AA==
+includedPermissions:
+- orgpolicy.policy.get
+- resourcemanager.projects.get
+- resourcemanager.projects.list
+- storage.multipartUploads.abort
+- storage.multipartUploads.create
+- storage.multipartUploads.list
+- storage.multipartUploads.listParts
+- storage.objects.create
+- storage.objects.delete
+- storage.objects.get
+- storage.objects.getIamPolicy
+- storage.objects.list
+- storage.objects.setIamPolicy
+- storage.objects.update
+name: roles/storage.objectAdmin
+stage: GA
+title: Storage Object Admin
+```
 
 **Question 48**
 
@@ -881,6 +1012,13 @@ D: Create a trace in Stackdriver to view the information.
 
 Answer: B
 
+https://www.examtopics.com/discussions/google/view/16701-exam-associate-cloud-engineer-topic-1-question-27-discussion/
+
+```text
+In the Activity page, where the identity performing logged actions is redacted from the audit log entry, User (anonymized) is displayed.
+Beacause of this, I think you can't verify the addition of metadata labels through Activity Logs. https://cloud.google.com/logging/docs/audit#view-activity
+```
+
 **Question 49**
 
 You are the project owner of a GCP project and want to delegate control to colleagues to manage buckets and files in Cloud Storage. You want to follow Google- recommended practices. Which IAM roles should you grant your colleagues?
@@ -895,6 +1033,10 @@ D: Storage Object Creator
 
 Answer: B
 
+- Storage Admin (roles/storage.admin) Grants full control of buckets and objects.
+- https://cloud.google.com/storage/docs/access-control/iam-roles
+- Storage Object Admin (roles/storage.objectAdmin) - Grants full control over objects, including listing, creating, viewing, and deleting objects.
+
 **Question 50**
 
 You have an object in a Cloud Storage bucket that you want to share with an external company. The object contains sensitive data. You want access to the content to be removed after four hours. The external company does not have a Google account to which you can grant specific user-based access privileges. You want to use the most secure method that requires the fewest steps. What should you do?
@@ -908,3 +1050,6 @@ C: Configure the storage bucket as a static website and furnish the object's URL
 D: Create a new Cloud Storage bucket specifically for the external company to access. Copy the object to that bucket. Delete the bucket after four hours have passed.
 
 Answer: A
+
+- https://www.examtopics.com/discussions/google/view/18518-exam-associate-cloud-engineer-topic-1-question-29-discussion/
+- https://cloud.google.com/storage/docs/access-control/signed-urls
