--- a/study-app/q51-60.md
+++ b/study-app/q51-60.md
@@ -96,6 +96,45 @@ Answer: C
 - Correct answer is C as IAM section provides the list of both Members and Roles.Option A is wrong as it would provide information about the roles only.Option B is wrong as it would provide only the service accounts.Option D is wrong as it would provide information about the roles only.
 ```
 
+**Question 56**:
+You need to create a new billing account and then link it with an existing Google Cloud Platform project. What should you do?
+
+A: Verify that you are Project Billing Manager for the GCP project. Update the existing project to link it to the existing billing account.
+
+B: Verify that you are Project Billing Manager for the GCP project. Create a new billing account and link the new billing account to the existing project.
+
+C: Verify that you are Billing Administrator for the billing account. Create a new project and link the new project to the existing billing account.
+
+D: Verify that you are Billing Administrator for the billing account. Update the existing project to link it to the existing billing account.
+
+Answer: C
+
+**Question 57**
+You have one project called proj-sa where you manage all your service accounts. You want to be able to use a service account from this project to take snapshots of VMs running in another project called proj-vm. What should you do?
+
+A: Download the private key from the service account, and add it to each VMs custom metadata.
+
+B: Download the private key from the service account, and add the private key to each VM's SSH keys.
+
+C: Grant the service account the IAM Role of Compute Storage Admin in the project called proj-vm.
+
+D: When creating the VMs, set the service account's API scope for Compute Engine to read/write.
+
+Answer: C
+
+**Question 58**:
+You created a Google Cloud Platform project with an App Engine application inside the project. You initially configured the application to be served from the us- central region. Now you want the application to be served from the asia-northeast1 region. What should you do?
+
+A: Change the default region property setting in the existing GCP project to asia-northeast1.
+
+B: Change the region property setting in the existing App Engine application from us-central to asia-northeast1.
+
+C: Create a second App Engine application in the existing GCP project and specify asia-northeast1 as the region to serve your application.
+
+D: Create a new GCP project and create an App Engine application inside this new project. Specify asia-northeast1 as the region to serve your application.
+
+Answer: D
+
 **Question 59**
 You need to grant access for three users so that they can view and edit table data on a Cloud Spanner instance. What should you do?
 
