--- a/study-app/q61-80.md
+++ b/study-app/q61-80.md
@@ -11,6 +11,8 @@ D: Configure an external TCP proxy load balancer.
 
 Answer: A
 
+- https://www.examtopics.com/discussions/google/view/16973-exam-associate-cloud-engineer-topic-1-question-40-discussion/
+
 **Question 62**
 
 You have 32 GB of data in a single file that you need to upload to a Nearline Storage bucket. The WAN connection you are using is rated at 1 Gbps, and you are the only one on the connection. You want to use as much of the rated 1 Gbps as possible to transfer the file rapidly. How should you upload the file?
@@ -25,7 +27,7 @@ D: Change the storage class of the bucket from Nearline to Multi-Regional.
 
 Answer: B
 
-Question 63
+**Question 63**
 You've deployed a microservice called myapp1 to a Google Kubernetes Engine cluster using the YAML file specified below:
 
 <img></img>
@@ -77,3 +79,198 @@ C: Select Compute Engine. Use preemptible VM instances of the appropriate standa
 D: Select Compute Engine. Use VM instance types that support micro bursting.
 
 Answer: C
+
+- https://cloud.google.com/compute/docs/instances/preemptible
+- Compute Engine always stops preemptible instances after they run for 24 hours. Certain actions reset this 24-hour counter.
+- Preemptible VM instances are available at much lower price—a 60-91% discount—compared to the price of standard VMs. However, Compute Engine might stop (preempt) these instances if it needs to reclaim the compute capacity for allocation to other VMs. Preemptible instances use excess Compute Engine capacity, so their availability varies with usage.
+
+**Question 66**
+You recently deployed a new version of an application to App Engine and then discovered a bug in the release. You need to immediately revert to the prior version of the application. What should you do?
+
+A: Run gcloud app restore.
+
+B: On the App Engine page of the GCP Console, select the application that needs to be reverted and click Revert.
+
+C: On the App Engine Versions page of the GCP Console, route 100% of the traffic to the previous version.
+
+D: Deploy the original version as a separate application. Then go to App Engine settings and split traffic between applications so that the original version serves 100% of the requests.
+
+Answer: D
+
+- https://medium.com/google-cloud/app-engine-project-cleanup-9647296e796a
+- https://cloud.google.com/sdk/gcloud/reference/components/restore
+- gcloud components restore - restore the Google Cloud CLI installation to its previous state
+- This is an undo operation,
+
+**Question 67**
+You deployed an App Engine application using gcloud app deploy, but it did not deploy to the intended project. You want to find out why this happened and where the application deployed. What should you do?
+
+A: Check the app.yaml file for your application and check project settings.
+
+B: Check the web-application.xml file for your application and check project settings.
+
+C: Go to Deployment Manager and review settings for deployment of applications.
+
+D: Go to Cloud Shell and run gcloud config list to review the Google Cloud configuration used for deployment.
+
+Answer: D
+
+- https://www.examtopics.com/discussions/google/view/16708-exam-associate-cloud-engineer-topic-1-question-46-discussion/
+- as it would help to check the config details and Option A is not correct, as app.yaml would have only the runtime and script to run parameters and not the Project details
+
+**Question 68**
+You want to configure 10 Compute Engine instances for availability when maintenance occurs. Your requirements state that these instances should attempt to automatically restart if they crash. Also, the instances should be highly available including during system maintenance. What should you do?
+
+A: Create an instance template for the instances. Set the'Automatic Restart' to on. Set the'On-host maintenance' to Migrate VM instance. Add the instance template to an instance group.
+
+B: Create an instance template for the instances. Set'Automatic Restart' to off. Set'On-host maintenance' to Terminate VM instances. Add the instance template to an instance group.
+
+C: Create an instance group for the instances. Set the'Autohealing' health check to healthy (HTTP).
+
+D: Create an instance group for the instance. Verify that the'Advanced creation options' setting for'do not retry machine creation' is set to off.
+
+Answer: A
+
+- Compute Engine will live migrate your VM instances if you configured the instance's availability policy to use live migration. This prevents your applications from experiencing disruptions during these events.
+  https://cloud.google.com/compute/docs/instances/setting-instance-scheduling-options#console
+
+**Question 69**
+You host a static website on Cloud Storage. Recently, you began to include links to PDF files on this site. Currently, when users click on the links to these PDF files, their browsers prompt them to save the file onto their local system. Instead, you want the clicked PDF files to be displayed within the browser window directly, without prompting the user to save the file locally. What should you do?
+
+A: Enable Cloud CDN on the website frontend.
+
+B: Enable'Share publicly' on the PDF file objects.
+
+C: Set Content-Type metadata to application/pdf on the PDF file objects.
+
+D: Add a label to the storage bucket with a key of Content-Type and value of application/pdf.
+
+Answer: C
+
+- C is correct. Edit the PDF objects in Cloud Storage and reconfigure their Content-Type metadata into application/pdf.
+- Cloud Storage uses Identity and Access Management (IAM) and Access Control Lists (ACLs) to control access to objects.
+
+**Question 70**
+You have a virtual machine that is currently configured with 2 vCPUs and 4 GB of memory. It is running out of memory. You want to upgrade the virtual machine to have 8 GB of memory. What should you do?
+
+A: Rely on live migration to move the workload to a machine with more memory.
+
+B: Use gcloud to add metadata to the VM. Set the key to required-memory-size and the value to 8 GB.
+
+C: Stop the VM, change the machine type to n1-standard-8, and start the VM.
+
+D: Stop the VM, increase the memory to 8 GB, and start the VM.
+
+Answer: D
+
+**Question 71**
+You have production and test workloads that you want to deploy on Compute Engine. Production VMs need to be in a different subnet than the test VMs. All the VMs must be able to reach each other over Internal IP without creating additional routes. You need to set up VPC and the 2 subnets. Which configuration meets these requirements?
+
+A: Create a single custom VPC with 2 subnets. Create each subnet in a different region and with a different CIDR range.
+
+B: Create a single custom VPC with 2 subnets. Create each subnet in the same region and with the same CIDR range.
+
+C: Create 2 custom VPCs, each with a single subnet. Create each subnet in a different region and with a different CIDR range.
+
+D: Create 2 custom VPCs, each with a single subnet. Create each subnet in the same region and with the same CIDR range.
+
+Answer: A
+
+- https://www.examtopics.com/discussions/google/view/17484-exam-associate-cloud-engineer-topic-1-question-50-discussion/
+
+- https://cloud.google.com/vpc/docs/using-vpc#subnet-rules
+  Primary and secondary ranges for subnets cannot overlap with any allocated range, any primary or secondary range of another subnet in the same network, or any IP ranges of subnets in peered networks.
+
+**Question 72**
+You need to create an autoscaling managed instance group for an HTTPS web application. You want to make sure that unhealthy VMs are recreated. What should you do?
+
+A: Create a health check on port 443 and use that when creating the Managed Instance Group.
+
+B: Select Multi-Zone instead of Single-Zone when creating the Managed Instance Group.
+
+C: In the Instance Template, add the label'health-check'.
+
+D: In the Instance Template, add a startup script that sends a heartbeat to the metadata server.
+
+Answer: A
+
+- I'll go with A, MIGs support autohealing, load balancing, autoscaling, and auto-updating. no the Images templates, this is set up in the MIG
+- Adding label won't effect to health chech!!
+- https://www.examtopics.com/discussions/google/view/17258-exam-associate-cloud-engineer-topic-1-question-51-discussion/
+
+**Question 73**
+Your company has a Google Cloud Platform project that uses BigQuery for data warehousing. Your data science team changes frequently and has few members.
+
+You need to allow members of this team to perform queries. You want to follow Google-recommended practices. What should you do?
+
+A: 1. Create an IAM entry for each data scientist's user account. 2. Assign the BigQuery jobUser role to the group.
+
+B: 1. Create an IAM entry for each data scientist's user account. 2. Assign the BigQuery dataViewer user role to the group.
+
+C: 1. Create a dedicated Google group in Cloud Identity. 2. Add each data scientist's user account to the group. 3. Assign the BigQuery jobUser role to the group.
+
+D: 1. Create a dedicated Google group in Cloud Identity. 2. Add each data scientist's user account to the group. 3. Assign the BigQuery dataViewer user role to the group.
+
+Answer: D
+
+- https://www.examtopics.com/discussions/google/view/18612-exam-associate-cloud-engineer-topic-1-question-52-discussion/
+- https://cloud.google.com/bigquery/docs/access-control
+- BigQuery Job User
+  (roles/bigquery.jobUser):Provides permissions to run jobs, including queries, within the project.
+- BigQuery Data Viewer
+  (roles/bigquery.dataViewer)
+  > bigquery.tables.list
+
+**Question 74**
+Your company has a 3-tier solution running on Compute Engine. The configuration of the current infrastructure is shown below.
+
+<img></img>
+
+Each tier has a service account that is associated with all instances within it. You need to enable communication on TCP port 8080 between tiers as follows:
+
+"¢ Instances in tier #1 must communicate with tier #2.
+
+"¢ Instances in tier #2 must communicate with tier #3.
+
+What should you do?
+
+A: 1. Create an ingress firewall rule with the following settings: "¢ Targets: all instances "¢ Source filter: IP ranges (with the range set to 10.0.2.0/24) "¢ Protocols: allow all 2. Create an ingress firewall rule with the following settings: "¢ Targets: all instances "¢ Source filter: IP ranges (with the range set to 10.0.1.0/24) "¢ Protocols: allow all
+
+B: 1. Create an ingress firewall rule with the following settings: "¢ Targets: all instances with tier #2 service account "¢ Source filter: all instances with tier #1 service account "¢ Protocols: allow TCP:8080 2. Create an ingress firewall rule with the following settings: "¢ Targets: all instances with tier #3 service account "¢ Source filter: all instances with tier #2 service account "¢ Protocols: allow TCP: 8080
+
+C: 1. Create an ingress firewall rule with the following settings: "¢ Targets: all instances with tier #2 service account "¢ Source filter: all instances with tier #1 service account "¢ Protocols: allow all 2. Create an ingress firewall rule with the following settings: "¢ Targets: all instances with tier #3 service account "¢ Source filter: all instances with tier #2 service account "¢ Protocols: allow all
+
+D: 1. Create an egress firewall rule with the following settings: "¢ Targets: all instances "¢ Source filter: IP ranges (with the range set to 10.0.2.0/24) "¢ Protocols: allow TCP: 8080 2. Create an egress firewall rule with the following settings: "¢ Targets: all instances "¢ Source filter: IP ranges (with the range set to 10.0.1.0/24) "¢ Protocols: allow TCP: 8080
+
+Answer: B
+
+- https://www.examtopics.com/discussions/google/view/23111-exam-associate-cloud-engineer-topic-1-question-53-discussion/
+
+**Question 75**
+You are given a project with a single Virtual Private Cloud (VPC) and a single subnetwork in the us-central1 region. There is a Compute Engine instance hosting an application in this subnetwork. You need to deploy a new instance in the same project in the europe-west1 region. This new instance needs access to the application. You want to follow Google-recommended practices. What should you do?
+
+A: 1. Create a subnetwork in the same VPC, in europe-west1. 2. Create the new instance in the new subnetwork and use the first instance's private address as the endpoint.
+
+B: 1. Create a VPC and a subnetwork in europe-west1. 2. Expose the application with an internal load balancer. 3. Create the new instance in the new subnetwork and use the load balancer's address as the endpoint.
+
+C: 1. Create a subnetwork in the same VPC, in europe-west1. 2. Use Cloud VPN to connect the two subnetworks. 3. Create the new instance in the new subnetwork and use the first instance's private address as the endpoint.
+
+D: 1. Create a VPC and a subnetwork in europe-west1. 2. Peer the 2 VPCs. 3. Create the new instance in the new subnetwork and use the first instance's private address as the endpoint.
+
+Answer: A
+
+- cloud VPN is not to connect two subnets in same VPN. It is usually to connect on-premises computer to cloud. we just need a separate subnet because of a separate region . The subnet can stay in same VPC that we they can talk to each other with private IP. Hence A is correct.
+- https://www.examtopics.com/discussions/google/view/18614-exam-associate-cloud-engineer-topic-1-question-54-discussion/
+
+**Question 76**
+Your projects incurred more costs than you expected last month. Your research reveals that a development GKE container emitted a huge number of logs, which resulted in higher costs. You want to disable the logs quickly using the minimum number of steps. What should you do?
+
+A: 1. Go to the Logs ingestion window in Stackdriver Logging, and disable the log source for the GKE container resource.
+
+B: 1. Go to the Logs ingestion window in Stackdriver Logging, and disable the log source for the GKE Cluster Operations resource.
+
+C: 1. Go to the GKE console, and delete existing clusters. 2. Recreate a new cluster. 3. Clear the option to enable legacy Stackdriver Logging.
+
+D: 1. Go to the GKE console, and delete existing clusters. 2. Recreate a new cluster. 3. Clear the option to enable legacy Stackdriver Monitoring.
+
+Answer: A
