--- a/study-app/q61-80.md
+++ b/study-app/q61-80.md
@@ -13,6 +13,8 @@ Answer: A
 
 - https://www.examtopics.com/discussions/google/view/16973-exam-associate-cloud-engineer-topic-1-question-40-discussion/
 
+<hr />
+
 **Question 62**
 
 You have 32 GB of data in a single file that you need to upload to a Nearline Storage bucket. The WAN connection you are using is rated at 1 Gbps, and you are the only one on the connection. You want to use as much of the rated 1 Gbps as possible to transfer the file rapidly. How should you upload the file?
@@ -27,7 +29,10 @@ D: Change the storage class of the bucket from Nearline to Multi-Regional.
 
 Answer: B
 
+<hr />
+
 **Question 63**
+
 You've deployed a microservice called myapp1 to a Google Kubernetes Engine cluster using the YAML file specified below:
 
 <img></img>
@@ -52,7 +57,10 @@ D: Store the database password in a file inside a Kubernetes persistent volume, 
 
 Answer: B
 
+<hr />
+
 **Question 64**
+
 You are running an application on multiple virtual machines within a managed instance group and have autoscaling enabled. The autoscaling policy is configured so that additional instances are added to the group if the CPU utilization of instances goes above 80%. VMs are added until the instance group reaches its maximum limit of five VMs or until CPU utilization of instances lowers to 80%. The initial delay for HTTP health checks against the instances is set to 30 seconds.
 
 The virtual machine instances take around three minutes to become available for users. You observe that when the instance group autoscales, it adds more instances then necessary to support the levels of end-user traffic. You want to properly maintain instance group sizes when autoscaling. What should you do?
@@ -66,6 +74,8 @@ C: Use a TCP health check instead of an HTTP health check.
 D: Increase the initial delay of the HTTP health check to 200 seconds.
 
 Answer: D
+
+<hr />
 
 **Question 65**
 You need to select and configure compute resources for a set of batch processing jobs. These jobs take around 2 hours to complete and are run nightly. You want to minimize service costs. What should you do?
@@ -83,6 +93,8 @@ Answer: C
 - https://cloud.google.com/compute/docs/instances/preemptible
 - Compute Engine always stops preemptible instances after they run for 24 hours. Certain actions reset this 24-hour counter.
 - Preemptible VM instances are available at much lower price—a 60-91% discount—compared to the price of standard VMs. However, Compute Engine might stop (preempt) these instances if it needs to reclaim the compute capacity for allocation to other VMs. Preemptible instances use excess Compute Engine capacity, so their availability varies with usage.
+
+<hr />
 
 **Question 66**
 You recently deployed a new version of an application to App Engine and then discovered a bug in the release. You need to immediately revert to the prior version of the application. What should you do?
@@ -102,6 +114,8 @@ Answer: D
 - gcloud components restore - restore the Google Cloud CLI installation to its previous state
 - This is an undo operation,
 
+<hr />
+
 **Question 67**
 You deployed an App Engine application using gcloud app deploy, but it did not deploy to the intended project. You want to find out why this happened and where the application deployed. What should you do?
 
@@ -117,6 +131,8 @@ Answer: D
 
 - https://www.examtopics.com/discussions/google/view/16708-exam-associate-cloud-engineer-topic-1-question-46-discussion/
 - as it would help to check the config details and Option A is not correct, as app.yaml would have only the runtime and script to run parameters and not the Project details
+
+<hr />
 
 **Question 68**
 You want to configure 10 Compute Engine instances for availability when maintenance occurs. Your requirements state that these instances should attempt to automatically restart if they crash. Also, the instances should be highly available including during system maintenance. What should you do?
@@ -134,6 +150,8 @@ Answer: A
 - Compute Engine will live migrate your VM instances if you configured the instance's availability policy to use live migration. This prevents your applications from experiencing disruptions during these events.
   https://cloud.google.com/compute/docs/instances/setting-instance-scheduling-options#console
 
+<hr />
+
 **Question 69**
 You host a static website on Cloud Storage. Recently, you began to include links to PDF files on this site. Currently, when users click on the links to these PDF files, their browsers prompt them to save the file onto their local system. Instead, you want the clicked PDF files to be displayed within the browser window directly, without prompting the user to save the file locally. What should you do?
 
@@ -150,6 +168,8 @@ Answer: C
 - C is correct. Edit the PDF objects in Cloud Storage and reconfigure their Content-Type metadata into application/pdf.
 - Cloud Storage uses Identity and Access Management (IAM) and Access Control Lists (ACLs) to control access to objects.
 
+<hr />
+
 **Question 70**
 You have a virtual machine that is currently configured with 2 vCPUs and 4 GB of memory. It is running out of memory. You want to upgrade the virtual machine to have 8 GB of memory. What should you do?
 
@@ -162,6 +182,8 @@ C: Stop the VM, change the machine type to n1-standard-8, and start the VM.
 D: Stop the VM, increase the memory to 8 GB, and start the VM.
 
 Answer: D
+
+<hr />
 
 **Question 71**
 You have production and test workloads that you want to deploy on Compute Engine. Production VMs need to be in a different subnet than the test VMs. All the VMs must be able to reach each other over Internal IP without creating additional routes. You need to set up VPC and the 2 subnets. Which configuration meets these requirements?
@@ -181,6 +203,8 @@ Answer: A
 - https://cloud.google.com/vpc/docs/using-vpc#subnet-rules
   Primary and secondary ranges for subnets cannot overlap with any allocated range, any primary or secondary range of another subnet in the same network, or any IP ranges of subnets in peered networks.
 
+<hr />
+
 **Question 72**
 You need to create an autoscaling managed instance group for an HTTPS web application. You want to make sure that unhealthy VMs are recreated. What should you do?
 
@@ -197,6 +221,8 @@ Answer: A
 - I'll go with A, MIGs support autohealing, load balancing, autoscaling, and auto-updating. no the Images templates, this is set up in the MIG
 - Adding label won't effect to health chech!!
 - https://www.examtopics.com/discussions/google/view/17258-exam-associate-cloud-engineer-topic-1-question-51-discussion/
+
+<hr />
 
 **Question 73**
 Your company has a Google Cloud Platform project that uses BigQuery for data warehousing. Your data science team changes frequently and has few members.
@@ -220,6 +246,8 @@ Answer: D
 - BigQuery Data Viewer
   (roles/bigquery.dataViewer)
   > bigquery.tables.list
+
+<hr />
 
 **Question 74**
 Your company has a 3-tier solution running on Compute Engine. The configuration of the current infrastructure is shown below.
@@ -246,6 +274,8 @@ Answer: B
 
 - https://www.examtopics.com/discussions/google/view/23111-exam-associate-cloud-engineer-topic-1-question-53-discussion/
 
+<hr />
+
 **Question 75**
 You are given a project with a single Virtual Private Cloud (VPC) and a single subnetwork in the us-central1 region. There is a Compute Engine instance hosting an application in this subnetwork. You need to deploy a new instance in the same project in the europe-west1 region. This new instance needs access to the application. You want to follow Google-recommended practices. What should you do?
 
@@ -262,6 +292,8 @@ Answer: A
 - cloud VPN is not to connect two subnets in same VPN. It is usually to connect on-premises computer to cloud. we just need a separate subnet because of a separate region . The subnet can stay in same VPC that we they can talk to each other with private IP. Hence A is correct.
 - https://www.examtopics.com/discussions/google/view/18614-exam-associate-cloud-engineer-topic-1-question-54-discussion/
 
+<hr />
+
 **Question 76**
 Your projects incurred more costs than you expected last month. Your research reveals that a development GKE container emitted a huge number of logs, which resulted in higher costs. You want to disable the logs quickly using the minimum number of steps. What should you do?
 
@@ -274,3 +306,5 @@ C: 1. Go to the GKE console, and delete existing clusters. 2. Recreate a new clu
 D: 1. Go to the GKE console, and delete existing clusters. 2. Recreate a new cluster. 3. Clear the option to enable legacy Stackdriver Monitoring.
 
 Answer: A
+
+- The question mentioned that "GKE container emitted a huge number of logs", in my opinion A is correct.
