--- a/study-app/q61-80.md
+++ b/study-app/q61-80.md
@@ -308,3 +308,90 @@ D: 1. Go to the GKE console, and delete existing clusters. 2. Recreate a new clu
 Answer: A
 
 - The question mentioned that "GKE container emitted a huge number of logs", in my opinion A is correct.
+
+<hr />
+
+**Question 77**
+
+You have a website hosted on App Engine standard environment. You want 1% of your users to see a new test version of the website. You want to minimize complexity. What should you do?
+
+A: Deploy the new version in the same application and use the --migrate option.
+
+B: Deploy the new version in the same application and use the --splits option to give a weight of 99 to the current version and a weight of 1 to the new version.
+
+C: Create a new App Engine application in the same project. Deploy the new version in that application. Use the App Engine library to proxy 1% of the requests to the new version.
+
+D: Create a new App Engine application in the same project. Deploy the new version in that application. Configure your network load balancer to send 1% of the traffic to that new application.
+
+Answer: B
+
+- https://cloud.google.com/sdk/gcloud/reference/app/services/set-traffic
+- To split traffic evenly between 'v1' and 'v2' of service 's1', run:
+  ```js
+  To split traffic evenly between 'v1' and 'v2' of service 's1', run:
+  ```
+  **--splits=SPLITS,[SPLITS,…]** Key-value pairs describing what proportion of traffic should go to each version. The split values are added together and used as weights. The exact values do not matter, only their relation to each other. For example, v1=2,v2=2 is equivalent to v1=.5,v2=.5
+
+<hr />
+
+**Question 78**　 You have a web application deployed as a managed instance group. You have a new version of the application to gradually deploy. Your web application is currently receiving live web traffic. You want to ensure that the available capacity does not decrease during the deployment. What should you do?
+
+A: Perform a rolling-action start-update with maxSurge set to 0 and maxUnavailable set to 1.
+
+B: Perform a rolling-action start-update with maxSurge set to 1 and maxUnavailable set to 0.
+
+C: Create a new managed instance group with an updated instance template. Add the group to the backend service for the load balancer. When all instances in the new managed instance group are healthy, delete the old managed instance group.
+
+D: Create a new instance template with the new application version. Update the existing managed instance group with the new instance template. Delete the instances in the managed instance group to allow the managed instance group to recreate the instance using the new instance template.
+
+Answer: B
+
+- https://cloud.google.com/compute/docs/instance-groups/rolling-out-updates-to-managed-instance-groups#max_unavailable
+- https://www.examtopics.com/discussions/google/view/18197-exam-associate-cloud-engineer-topic-1-question-57-discussion/
+- **Maximum surge**: Use the maxSurge option to configure how many new instances the MIG can create above its targetSize during an automated update. For example, if you set maxSurge to 5, the MIG uses the new instance template to create up to 5 new instances above your target size.
+
+- **Maximum unavailable**: Use the maxUnavailable option to configure how many instances are unavailable at any time during an automated update. For example, if you set maxUnavailable to 5, then only 5 instances are taken offline for updating at a time.
+
+<hr />
+
+**Question 79**
+You are building an application that stores relational data from users. Users across the globe will use this application. Your CTO is concerned about the scaling requirements because the size of the user base is unknown. You need to implement a database solution that can scale with your user growth with minimum configuration changes. Which storage solution should you use?
+
+A: Cloud SQL
+
+B: Cloud Spanner
+
+C: Cloud Firestore
+
+D: Cloud Datastore
+
+Answer: B
+
+- Cloud SQL for small relational data, scaled manually
+- Cloud Spanner for relational data, scaled automatically
+- Cloud Firestore for app-based data(?)/for non relational data (noSql)
+- Cloud Datastore for non-relational data
+- Cloud Firestore and Cloud Datastore - can easily be eliminated doesn't fall under Relational DB
+
+<hr />
+
+**Question 80**
+You are the organization and billing administrator for your company. The engineering team has the Project Creator role on the organization. You do not want the engineering team to be able to link projects to the billing account. Only the finance team should be able to link a project to a billing account, but they should not be able to make any other changes to projects. What should you do?
+
+A: Assign the finance team only the Billing Account User role on the billing account.
+
+B: Assign the engineering team only the Billing Account User role on the billing account.
+
+C: Assign the finance team the Billing Account User role on the billing account and the Project Billing Manager role on the organization.
+
+D: Assign the engineering team the Billing Account User role on the billing account and the Project Billing Manager role on the organization.
+
+Answer: C
+
+- https://cloud.google.com/billing/docs/how-to/modify-project#permissions_required_for_this_task_2
+
+- A Cloud Billing account is used to define who pays for a given set of resources, and it can be linked to one or more projects. Project usage is charged to the linked Cloud Billing account.
+
+If you are a billing administrator on only one Cloud Billing account, new projects you create are automatically linked to your existing Cloud Billing account. If you create or have access to multiple Cloud Billing accounts, you can change the Cloud Billing account a project is billed to.
+
+<hr />
