--- a/study-app/100-199.md
+++ b/study-app/100-199.md
@@ -199,18 +199,19 @@ Answer: D
 
 <hr />
 
-**Question 112**
-Your company's infrastructure is on-premises, but all machines are running at maximum capacity. You want to burst to Google Cloud. The workloads on Google Cloud must be able to directly communicate to the workloads on-premises using a private IP range. What should you do?
+**Question 113**
+You want to select and configure a solution for storing and archiving data on Google Cloud Platform. You need to support compliance objectives for data from one geographic location. This data is archived after 30 days and needs to be accessed annually. What should you do?
 
-A: In Google Cloud, configure the VPC as a host for Shared VPC.
+A: Select Multi-Regional Storage. Add a bucket lifecycle rule that archives data after 30 days to Coldline Storage.
 
-B: In Google Cloud, configure the VPC for VPC Network Peering.
+B: Select Multi-Regional Storage. Add a bucket lifecycle rule that archives data after 30 days to Nearline Storage.
 
-C: Create bastion hosts both in your on-premises environment and on Google Cloud. Configure both as proxy servers using their public IP addresses.
+C: Select Regional Storage. Add a bucket lifecycle rule that archives data after 30 days to Nearline Storage.
 
-D: Set up Cloud VPN between the infrastructure on-premises and Google Cloud.
+D: Select Regional Storage. Add a bucket lifecycle rule that archives data after 30 days to Coldline Storage.
 
 Answer: D
+
 
 <hr />
 
