--- a/study-app/q1-99.md
+++ b/study-app/q1-99.md
@@ -1222,6 +1222,13 @@ D: Deploy the original version as a separate application. Then go to App Engine 
 
 Answer: D
 
+- Selected Answer: C
+
+  > route 100% of the traffic to the previous version
+
+- Correct option is C.
+  > AppEngine already creates a version for you. Also you do not create a application as one project is associated with one AppEngine application.
+
 <hr />
 
 **Question 67**
@@ -1476,6 +1483,10 @@ D: Export these logs to Cloud Pub/Sub and write a Cloud Dataflow pipeline to sto
 
 Answer: B
 
+```
+cost effective - sink the logs 1to Cold Storage
+```
+
 <hr />
 
 **Question 83**
@@ -1490,6 +1501,19 @@ C: Package it in a container image, and run it on Kubernetes Engine, using n1-st
 D: Run it on Compute Engine, choose the instance type n1-standard-1, and add an SSD persistent disk of 32 GB.
 
 Answer: A
+
+```
+Memorystore
+Reduce latency with scalable, secure, and highly available in-memory service for Redis and Memcached.
+https://cloud.google.com/memorystore
+
+https://cloud.google.com/memorystore/docs/redis/redis-overview#what_its_good_for
+
+- Memorystore for Redis provides a fast, in-memory store for use cases that require fast, real-time processing of data.
+- Caching
+- Gaming
+- Stream Processing: Whether processing a Twitter feed
+```
 
 <hr />
 
@@ -1506,6 +1530,13 @@ D: 1. Using Cloud VPN or Interconnect, create a tunnel to a VPC in Google Cloud.
 
 Answer: D
 
+```
+on-prem - app
+GCP - Cloud Storage
+wants to access with internal IP
+on-prem -> Cloud VPN -> D
+```
+
 <hr />
 
 **Question 85**
@@ -1521,6 +1552,16 @@ D: 1. Deploy your application on Cloud Run on GKE with the connectivity set to I
 
 Answer: C
 
+https://cloud.google.com/run/docs/securing/managing-access#make-service-public
+
+```
+gcloud run services add-iam-policy-binding [SERVICE_NAME] \
+  --member="allUsers" \
+  --role="roles/run.invoker"
+
+gcloud run deploy [SERVICE_NAME] ... --allow-unauthenticated
+```
+
 <hr />
 
 **Question 86**
@@ -1535,6 +1576,11 @@ C: Deploy the container on App Engine Flexible.
 D: Deploy the container on GKE with cluster autoscaling and horizontal pod autoscaling enabled.
 
 Answer: A
+https://cloud.google.com/run/docs
+
+```
+Cloud Run is a managed compute platform that enables you to run containers that are invocable via requests or events.
+```
 
 <hr />
 
@@ -1551,6 +1597,15 @@ D: Create a new GCP organization and a new billing account. Migrate the acquired
 
 Answer: A
 
+- [Billing account permissions](https://cloud.google.com/resource-manager/docs/project-migration#permissions-billing)
+
+- https://fargyle.medium.com/google-cloud-platform-cross-org-billing-41c5db8fefa6
+
+```
+- Billing Account User (roles/billing.user) on the destination billing account
+- Project billing manager (roles/billing.projectManager) on the project
+```
+
 <hr />
 
 **Question 88**
@@ -1565,6 +1620,10 @@ C: Add the support team group to the roles/spanner.databaseReader role.
 D: Add the support team group to the roles/stackdriver.accounts.viewer role.
 
 Answer: A
+
+- should not have access to table data
+- [roles/spanner.databaseReader](https://cloud.google.com/spanner/docs/iam#roles)
+  > Read from the Cloud Spanner database.
 
 <hr />
 
@@ -1581,6 +1640,11 @@ D: 1. Create a Cloud Function that has the BigQuery User role on the platform-lo
 
 Answer: C
 
+```
+Logs Explorer
+resource.type="gce_instance"
+```
+
 <hr />
 
 **Question 90**
@@ -1595,6 +1659,13 @@ C: With Deployment Manager, create a Compute Engine instance with a startup scri
 D: In the cluster's definition in Deployment Manager, add a metadata that has kube-system as key and the DaemonSet manifest as value.
 
 Answer: C
+
+- [Creating DaemonSets](https://cloud.google.com/kubernetes-engine/docs/concepts/daemonset#creating_daemonsets)
+
+  > kubectl create
+
+- [DaemonSet](https://cloud.google.com/kubernetes-engine/docs/concepts/daemonset)
+  > A DaemonSet ensures that all (or some) Nodes run a copy of a Pod.
 
 <hr />
 
@@ -1611,6 +1682,15 @@ D: Go to the IAM & admin console, grant a user account permissions similar to th
 
 Answer: B
 
+```
+To use a service account outside of Google Cloud, such as on other platforms or on-premises, you must first establish the identity of the service account. Public/private key pairs provide a secure way of accomplishing this goal.
+
+https://cloud.google.com/iam/docs/creating-managing-service-account-keys
+
+gcloud iam service-accounts keys create KEY_FILE \
+    --iam-account=SA_NAME@PROJECT_ID.iam.gserviceaccount.com
+```
+
 <hr />
 
 **Question 92**
@@ -1626,16 +1706,22 @@ D: Configure the ACLs on each image in Cloud Storage to give read-only access to
 
 Answer: A
 
+```
+https://cloud.google.com/container-registry/docs/access-control
+
+IAM permissions determine who can access resources. All users, service accounts, and other identities that interact with Container Registry must have the appropriate Cloud Storage permissions.
+```
+
 <hr />
 
 **Question 93**
 You deployed a new application inside your Google Kubernetes Engine cluster using the YAML file specified below.
 
-<IMG 72-1>
+![](images/93-1.png)
 
 You check the status of the deployed pods and notice that one of them is still in PENDING status:
 
-<IMG 72-2>
+![](images/93-2.png)
 
 You want to find out why the pod is stuck in pending status. What should you do?
 
@@ -1648,6 +1734,12 @@ C: Review details of myapp-deployment-58ddbbb995-lp86m Pod and check for warning
 D: View logs of the container in myapp-deployment-58ddbbb995-lp86m pod and check for warning messages.
 
 Answer: C
+
+[Debugging Pods](https://kubernetes.io/docs/tasks/debug/debug-application/debug-pods/#debugging-pods)
+
+```
+kubectl describe pods ${POD_NAME}
+```
 
 <hr />
 
@@ -1664,6 +1756,14 @@ D: After the VM has been created, download the JSON private key for the default 
 
 Answer: B
 
+> gcloud beta compute reset-windows-password allows a user to reset and retrieve a password for a Windows virtual machine instance. If the Windows account does not exist, this command will cause the account to be created and the password for that new account will be returned.
+
+https://cloud.google.com/sdk/gcloud/reference/beta/compute/reset-windows-password
+
+```
+gcloud beta compute reset-windows-password my-instance --zone=us-central1-f --user=foo
+```
+
 <hr />
 
 **Question 95**
@@ -1678,6 +1778,17 @@ C: Enable block project wide keys for the instance. Generate an SSH key for each
 D: Enable block project wide keys for the instance. Generate an SSH key and associate the key with that instance. Distribute the key to dev1 users and direct them to use their third-party tools to connect.
 
 Answer: A
+
+- [Set up OS Login](https://cloud.google.com/compute/docs/oslogin/set-up-oslogin)
+
+- [Enable OS Login](https://cloud.google.com/compute/docs/oslogin/set-up-oslogin#enable_os_login)
+
+```
+gcloud compute instances create VM_NAME \
+  --image-family=IMAGE_FAMILY \
+  --image-project=IMAGE_PROJECT \
+  --metadata enable-oslogin=TRUE
+```
 
 <hr />
 
@@ -1694,6 +1805,17 @@ D: Run gcloud projects describe <project ID> to verify the project value, and th
 
 Answer: A
 
+https://cloud.google.com/sdk/gcloud/reference/services/list#--enabled
+
+```
+//--enabled: (DEFAULT) Return the services which the project has enabled.
+gcloud services list --enabled
+
+//--available
+Return the services available to the project to enable.
+gcloud services list --available
+```
+
 <hr />
 
 **Question 97**
@@ -1709,20 +1831,36 @@ D: Deploy a new version of your application in App Engine. Then go to App Engine
 
 Answer: D
 
+https://cloud.google.com/sdk/gcloud/reference/app/services/set-traffic
+
+```
+//To send all traffic to 'v2' of service 's1', run:
+gcloud app services set-traffic s1 --splits=v2=1
+```
+
+```
+//To split traffic evenly between 'v1' and 'v2' of service 's1', run:
+gcloud app services set-traffic s1 --splits=v2=.5,v1=.5
+```
+
 <hr />
 
 **Question 98**
 You need to provide a cost estimate for a Kubernetes cluster using the GCP pricing calculator for Kubernetes. Your workload requires high IOPs, and you will also be using disk snapshots. You start by entering the number of nodes, average hours, and average days. What should you do next?
 
-A: Fill in local SSFill in persistent disk storage and snapshot storage.
+A: Fill in local SSD. Fill in persistent disk storage and snapshot storage.
 
-B: Fill in local SSAdd estimated cost for cluster management.
+B: Fill in local SSD. Add estimated cost for cluster management.
 
 C: Select Add GPUs. Fill in persistent disk storage and snapshot storage.
 
 D: Select Add GPUs. Add estimated cost for cluster management.
 
 Answer: A
+
+```
+This one is Tricky, local SSD is require for High IOPS - https://cloud.google.com/compute/docs/disks/local-ssd , but it say using disk snapshots. A is correct.
+```
 
 <hr />
 
@@ -1738,3 +1876,7 @@ C: Create a Kubernetes Service of type NodePort to expose the application on por
 D: Create a HAProxy pod in the cluster to load-balance the traffic to all the pods of the application. Forward the public traffic to HAProxy with an iptable rule. Configure the DNS name of your application using the public IP of the node HAProxy is running on.
 
 Answer: A
+
+- https://cloud.google.com/kubernetes-engine/docs/tutorials/http-balancer
+
+- https://medium.com/google-cloud/kubernetes-nodeport-vs-loadbalancer-vs-ingress-when-should-i-use-what-922f010849e0
